<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Todo List - Schedule</string>
<string name="save">Save</string>
<string name="title">Title</string>
<string name="start_typing_here">Start typing here</string>
<string name="tap_to_start_recording">Tap to start recording</string>
<string name="draw_a_new_pattern">Draw a new pattern</string>
<string name="new_task">New Task</string>
<string name="task_name">Task Name</string>
<string name="enter_name">Enter Name</string>
<string name="select_category">Select Category</string>
<string name="create_new">Create New</string>
<string name="description">Description</string>
<string name="type_something">Type something…</string>
<string name="due_date">Due Date</string>
<string name="time_reminder">Time &amp; Reminder</string>
<string name="no">No</string>
<string name="manage_categories">Manage Categories</string>
<string name="archived">Archived</string>
<string name="delete">Delete</string>
<string name="lock">Passcode</string>
<string name="enable_pass_code">Enable Pass Code</string>
<string name="change_passcode">change passcode</string>
<string name="set_up_a_security_question">Set up a security</string>
<string name="biometric_authentication">Enabled fingerprint</string>
<string name="question">question</string>
<string name="this_question_is_used_to_verify_your_identity_in_case_you_forget_your_passcode">This question is used to verify your identity in case you forget your passcode</string>
<string name="draw_your_unlock_pattern">Draw your unlock pattern</string>
<string name="forgot_password">forgot password</string>
<string name="trash">Trash</string>
<string name="calender">Calendar</string>
<string name="tasks_list">Tasks List</string>
<string name="notes">Notes</string>
<string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
<string name="restore">Restore</string>
<string name="create_new_category">Create new category</string>
<string name="yes">Yes</string>
<string name="date">Date</string>
<string name="grid">Grid</string>
<string name="profile">Profile</string>
<string name="edit_profile">Edit Profile</string>
<string name="your_name">Your Name</string>
<string name="enter_user_name">Enter User Name</string>
<string name="status">Status</string>
<string name="write_your_status">Write Your Status</string>
<string name="rate_us">Rate Us</string>
<string name="are_you_enjoying_our_app_your_opinion_matter_us">Are you enjoying our app ? your opinion matter us.</string>
<string name="reminder">Reminder</string>
<string name="content">Content</string>
<string name="notification">Notification</string>
<string name="set_time">Set Time</string>
<string name="repeat">Repeat</string>
<string name="search">Search</string>
<string name="no_matching_search_results">No matching search results</string>
<string name="settings">Settings</string>
<string name="personal">Personal</string>
<string name="themes">Themes</string>
<string name="my_data">My Data</string>
<string name="delete_app_data">Delete app data</string>
<string name="category">Category</string>
<string name="set_reminder">Set Reminder</string>
<string name="others">Others</string>
<string name="share_us">Share Us</string>
<string name="feedback">Feedback</string>
<string name="privacy_policy">Privacy Policy</string>
<string name="background">Background</string>
<string name="font">Font</string>
<string name="camera">Camera</string>
<string name="gallery">Gallery</string>
<string name="to_do_list">To do List</string>
<string name="smooth">Smooth</string>
<string name="modern">Modern</string>
<string name="pending">Pending</string>
<string name="completed">Completed</string>
<string name="edit">Edit</string>
<string name="mark_as_done">Mark as Done</string>
<string name="something_went_wrong">Something went wrong</string>
<string name="camera_not_found">No camera app found</string>
<string name="permission_denied">Permissions Denied</string>
<string name="select_day">Select Day</string>
<string name="enable_notifications">Enable Notifications</string>
<string name="notifications_are_currently_disabled_do_you_want_to_enable_them">Notifications are currently disabled. Do you want to enable them?</string>
<string name="how_was_your_day">How was your day</string>
<string name="my_diary_time_to_write">My Diary - Time to write</string>
<string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
<string name="please_long_click_to_restore">Please long click to restore</string>
<string name="unarchived">Unarchived</string>
<string name="work">Work</string>
<string name="wishlist">Wishlist</string>
<string name="birthday">Birthday</string>
<string name="none">None</string>
<string name="all">All</string>
<string name="stop_recording">Stop Recording</string>
<string name="please_choose_position_to_insert_emoji">Please choose position to insert emoji</string>
<string name="exit_confirmation">Exit Confirmation</string>
<string name="are_you_sure_you_want_to_exist">Are you sure you want to Exit.</string>
<string name="start">Start</string>
<string name="solid">Solid</string>
<string name="gradient">Gradient</string>
<string name="simple">Simple</string>
<string name="cute">Cute</string>
<string name="holiday">Holiday</string>
<string name="mark_as_undone">Mark as Undone</string>
<string name="update_task">Task Updated</string>
<string name="category_is_already_exist">Category is Already Exist</string>
<string name="list">List</string>
<string name="draw_the_unlock_pattern_again_to_confirm_it">Draw the unlock pattern again to confirm it</string>
<string name="pattern_do_not_match_with_previous">Pattern do not match with previous</string>
<string name="your_device_has_no_fingerprint_sensor">Your device has no fingerprint sensor</string>
<string name="fingerprint_is_not_enabled">Fingerprint is not enabled</string>
<string name="what_is_your_favourite_color">What is your favourite color</string>
<string name="what_is_your_favourite_food">What is your favourite food</string>
<string name="what_is_your_pet_name">What is your pet name</string>
<string name="ok">ok</string>
<string name="please_fill_all_fields">Please fill all fields</string>
<string name="information_saved">Information Saved</string>
<string name="wrong_answer">Wrong Answer</string>
<string name="enter_previous_password">Enter previous password</string>
<string name="pattern_do_not_match">Pattern do not match</string>
<string name="snooze">Snooze</string>
</resources>
