<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">
        <TextView
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/textCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_category"
            android:fontFamily="@font/baloobhai2_semibold"/>
        <EditText
            android:textSize="18sp"
            android:textColor="@color/brown"
            android:id="@+id/categoryName"
            android:background="@drawable/task_edittxt"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_name"
            android:ems="10"
            android:maxLength="50"
            android:layout_below="@+id/textCreate"
            android:inputType="text"
            android:fontFamily="@font/baloobhai2_semibold"
            android:textAlignment="textStart"/>
        <TextView
            android:textSize="20sp"
            android:textColor="@color/green"
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/yes"
            android:layout_below="@+id/categoryName"
            android:fontFamily="@font/baloobhai2_semibold"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="15dp"/>
        <TextView
            android:textSize="20sp"
            android:textColor="#b6b2b2"
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/no"
            android:layout_below="@+id/categoryName"
            android:fontFamily="@font/baloobhai2_regular"
            android:layout_toStartOf="@+id/yes"
            android:layout_marginHorizontal="15dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
