<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/full_light_green"

    >

    <androidx.core.widget.NestedScrollView

        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/banner1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backhome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:padding="6dp"
                    android:src="@drawable/back" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/baloobhai2_bold"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="120dp"
                    android:layout_height="115dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="#ff000000"
                    app:civ_border_width="3dp" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/change_btn"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/baloobhai2_bold"
                android:padding="10dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/camera"
                android:layout_marginHorizontal="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/baloobhai2_bold"
                        android:text="@string/your_name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/nameet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView4"
                        android:layout_marginLeft="6dp"
                        android:background="#00000000"
                        android:fontFamily="@font/baloobhai2_regular"
                        android:hint="@string/enter_user_name"
                        android:padding="7dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardView2"
                android:layout_marginHorizontal="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/baloobhai2_bold"
                        android:text="@string/status"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/statuset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text"
                        android:layout_marginLeft="8dp"
                        android:background="#00000000"
                        android:fontFamily="@font/baloobhai2_regular"
                        android:hint="@string/write_your_status"
                        android:padding="7dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveNoteBtn"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@+id/cardView3"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_radius"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/baloobhai2_bold"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:id="@+id/banner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center" />
    </RelativeLayout>

</RelativeLayout>