<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"

   >

<RelativeLayout
    android:layout_above="@id/banner1"
    android:id="@+id/parentLayout"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/back"/>
    <TextView
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/set_up_a_security_question"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/baloobhai2_bold"
        android:textAlignment="center"/>
    <TextView
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/baloobhai2_bold"
        android:textAlignment="center"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/this_question_is_used_to_verify_your_identity_in_case_you_forget_your_passcode"
        android:layout_below="@+id/text2"
        android:fontFamily="@font/baloobhai2_regular"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:autoHandwritingEnabled="true"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/text3">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/CardView"
            android:background="@drawable/round_bg"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#97dfdbdb"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            app:cardCornerRadius="10dp">
            <Spinner
                android:id="@+id/questionsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/questiontxt"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="question"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/CardView2"
            android:background="@drawable/round_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#97dfdbdb"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="10dp">
            <EditText
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:id="@+id/asnEt"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Please input your answer"
                android:fontFamily="@font/baloobhai2_regular"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/saveBtn"
            android:background="@drawable/round_bg"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/save"
            android:fontFamily="@font/baloobhai2_bold"
            android:backgroundTint="@color/green"
            android:layout_marginVertical="10dp"
            android:paddingVertical="15dp"/>
    </LinearLayout>
</RelativeLayout>




<RelativeLayout
    android:id="@+id/banner1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center" />
</RelativeLayout>

</RelativeLayout>
