<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Base.Theme.TodoList"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/app_name"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/baloobhai2_semibold"
                android:layout_marginHorizontal="25dp"/>
            <ImageView
                android:id="@+id/searchBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/search_icon"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="5dp"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/toolbar"
            android:layout_marginHorizontal="10dp"/>
        <androidx.core.widget.NestedScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/categoryRecyclerView">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:id="@+id/pending"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/pending"
                    android:fontFamily="@font/baloobhai2_semibold"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="10dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/taskRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pending"/>
                <TextView
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:id="@+id/completed"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/completed"
                    android:layout_below="@+id/taskRecyclerView"
                    android:fontFamily="@font/baloobhai2_semibold"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="10dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/checkedRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/completed"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTaskBtn"
            android:background="@drawable/rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/add"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:layout_alignParentEnd="true"
            app:elevation="15dp"
            style="@style/RectangularShape"/>
    </RelativeLayout>
</RelativeLayout>
